[metadata]
name = crypto-trade-rl
version = 0.1.0
author = Yuto Hayashi
url = https://github.com/YutoHayashi/crypto-trade-rl
licence = MIT

[options]
packages = 
    crypto_trade_rl
python_requires = ==3.11.*
include_package_data = True
install_requires =
    gymnasium
    lightning
    numpy<2
    pandas
    python-dotenv
    pytorch-forecasting
    scikit-learn
    torch
    torchrl

[options.package_data]
crypto_trade_rl = presets.json

[options.entry_points]
console_scripts =
    train-dqn = crypto_trade_rl.train:main